# decoded-science

./: .gitignore  CLAUDE.md  CROSS-PROJECT.md  PIPELINE.md  README.md  ecosystem.config.js  pyproject.toml
.claude/: launch.json
.claude/rules/: verification-protocol.md
.wrangler/cache/: pages.json  wrangler-account.json
decoded/: __init__.py  cost_tracker.py  queue.py
decoded/api/: analysis_worker.py  auth.py  chat.py  main.py
decoded/config/: __init__.py  seed_domain.py
decoded/connect/: embedding_discovery.py  graph_discovery.py  llm_discovery.py  worker.py
decoded/graph/: worker.py  (+1 more)
deploy/: nginx-connectome-live.conf  nginx-connectome.conf
explorer/: index.html  package-lock.json  package.json  tailwind.config.js
migrations/: 001_raw_papers.sql  002_extractions.sql  003_connections.sql  004_ingest_columns.sql  005_user_workspaces.sql  006_claims.sql  007_convergence_zones.sql  008_field_gaps.sql  009_bridge_results.sql  010_fulltext_search.sql  011_data_provenance.sql  012_chat.sql  013_extended_edges_view.sql  014_etiology_briefs.sql  neo4j_constraints.cypher
scripts/: aggregate_loop.sh  backfill_outreach.py  boost_connections.py  build_entity_edges.py  create_gmail_drafts.py  discovery.py  entity_cooccurrence.py  etiology_brief.py  expand_entity_mentions.py  foundry_question_orchestrator.py  harvest_claims_to_triples.py  harvest_mechanisms_to_triples.py  import_extracted_entities.py  load_pathway_backbone.py  normalize_entities.py  pathway_backbone_data.py  pearl_discovery_tool.sh  ring0_ingest.py  seed_bridge_entities.py  traverse_connectome.py
(+63 files in other folders)
