[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decoded"
version = "0.1.0"
description = "Literature connectome — AI-discovered connections in scientific research"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.27",
    "anthropic>=0.40",
    "redis>=5.0",
    "neo4j>=5.17",
    "pgvector>=0.2",
    "structlog>=24.0",
    "scispacy",
    "lxml",
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["decoded"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
